# lerobot-labeler

./: .gitignore  README.md  electron-builder.yml  package-lock.json  package.json  pyproject.toml  tsconfig.json
scripts/: dev.mjs
src/app/: globals.css  layout.tsx  page.tsx
src/app/labeler/: layout.tsx  page.tsx
src/backend/: config.py  main.py
src/backend/models/: schemas.py
src/backend/routers/: datasets.py  labels.py  ws.py
src/backend/services/: dataset_service.py  label_service.py  session_service.py  signal_service.py  video_service.py
src/components/labels/: LabelPanel.tsx  RewardStrip.tsx
src/components/sidebar/: DatasetSelector.tsx  EpisodeList.tsx
src/components/timeline/: PlaybackControls.tsx  Timeline.tsx
src/components/ui/: ConfirmModal.tsx
src/components/viewer/: DimensionFilter.tsx  PanelGrid.tsx  SignalChart.tsx  SignalSelector.tsx  SortablePanel.tsx  VideoPlayer.tsx
src/electron/: main.ts  preload.ts  python-manager.ts
src/lib/: api.ts  types.ts
tests/: conftest.py  test_api_datasets.py  test_api_labels.py  test_dataset_service.py  test_label_service.py  test_lerobot_compat.py  test_session_service.py
